@@ -1,3 +1,11 @@
+2011-10-12 mmichaud <michael.michaud@free.fr>
+    * Small improvement in LabelStyle (Label multipolygon on widest polygon)
+    * Use new FeatureInstaller methods and exclude calls to MultiInputDialog
+      in run method of plugins (see also feature request 3421958 & 3200485) :
+      - LineNoderPlugIn
+      - PolygonizerPlugIn
+      - PrecisionReducerPlugIn
+
 2011-10-08 mmichaud <michael.michaud@free.fr>
     * Clean and improve AutoAssignAttributePlugIn
 
